data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1561.wast
;; 2. **Test 2: Unreachable within Loop with Incorrect Return Type**    - A `loop` that ends with an `unreachable` followed by a result-producing instruction with inconsistent types. It tests if the type constraints on loop break values are enforced accurately following a trap.    - **Constraint Checked:** Validates that the environment maintains type consistency even after `unreachable` is executed within a loop.

(assert_invalid
  (module (func $test_loop_unreachable_inconsistent_type
    (loop (br 0) (unreachable) (i32.const 1))
  ))
  "type mismatch"
)